...
  }, [removeFavorite])

  const handleAddFavorite = useCallback(() => {
    if (!userCoordinates) return

    setAddModalLocation({
      placeName: 'Current Location',
      address: null,
      latitude: userCoordinates.latitude,
      longitude: userCoordinates.longitude,
    })
    setShowAddModal(true)
  }, [userCoordinates])
...
